// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delete button renders default correctly 1`] = `
<span
  data-for="table-tooltip"
  data-tip="Delete Rows"
>
  <button
    className="btn-table"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <i
      className="fal fa-trash-alt"
    />
  </button>
</span>
`;

exports[`Delete button renders enabled when number of rows selected > 0 1`] = `
<span
  data-for="table-tooltip"
  data-tip="Delete Rows"
>
  <button
    className="btn-table"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <i
      className="fal fa-trash-alt"
    />
  </button>
</span>
`;

exports[`Delete warning renders default correctly 1`] = `
Array [
  <div
    className="table-header-delete-warning-arrow"
  />,
  <div
    className="table-header-delete-warning"
  >
    <p>
      Delete 
      0
       
      record?
    </p>
    <button
      className="btn btn-danger btn-sm btn-block"
      type="button"
    >
      Yes
    </button>
  </div>,
]
`;

exports[`Delete warning renders with multiple rows selected correctly 1`] = `
Array [
  <div
    className="table-header-delete-warning-arrow"
  />,
  <div
    className="table-header-delete-warning"
  >
    <p>
      Delete 
      5
       
      records?
    </p>
    <button
      className="btn btn-danger btn-sm btn-block"
      onClick={[Function]}
      type="button"
    >
      Yes
    </button>
  </div>,
]
`;
